# bank_widget

./: .coverage  .env  .gitignore  README.md  check_utils.py  conftest.py  pyproject.toml
data/: operations.json
src/: decorators.py  external_api.py  file_processing.py  generators.py  logger_config.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
